syntax = "proto3";

option java_package = "com.wemaka.weatherapp.store.proto";
option java_multiple_files = true;
option java_outer_classname = "TemperatureProto";

message TemperatureProto {
  string time = 1;
  int32 temperature = 2;
  int32 imgIdWeatherCode = 3;
}
